--- a/apps/discord/package.json
+++ b/apps/discord/package.json
@@ -1,16 +1,24 @@
 {
   "name": "@portal/discord",
   "packageManager": "pnpm@8.1.0",
-  "scripts": {},
+  "scripts": {
+    "start_bot": "GCLOUD_PROJECT=opthub-portal ts-node -r tsconfig-paths/register ./src/bot.ts"
+  },
   "engines": {
     "node": "20",
     "pnpm": "8"
   },
   "dependencies": {
     "@portal/universal_modules": "file:../../packages/universal_modules",
-    "dotenv": "^16.4.5",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^6.0.1"
+  },
+  "devDependencies": {
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.0"
   },
   "private": true
 }
