feat: Discordの入退出のSlack通知と勤怠一覧を実装

--- a/apps/discord/package.json
+++ b/apps/discord/package.json
@@ -2,7 +2,7 @@
   "name": "@portal/discord",
   "packageManager": "pnpm@8.1.0",
   "scripts": {
-    "start_bot": "GCLOUD_PROJECT=opthub-portal ts-node -r tsconfig-paths/register ./src/bot.ts"
+    "start_bot": "GCLOUD_PROJECT=opthub-portal GOOGLE_APPLICATION_CREDENTIALS=./secrets/credential.json ts-node -r tsconfig-paths/register ./src/bot.ts"
   },
   "engines": {
     "node": "20",
